Fixing Event.js path

--- a/fifteenpuzzle.html
+++ b/fifteenpuzzle.html
@@ -16,7 +16,7 @@
 <button type="button" id="new-game" style="float: right">New game</button>
 </div>
 
-<script type="text/javascript" src="../Event.js/Event.js"></script>
+<script type="text/javascript" src="Event.js"></script>
 <script type="text/javascript" src="FifteenPuzzle.js"></script>
 <script type="text/javascript">
 "use strict";
