Added link to demo with graphics

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <a href="fifteenpuzzle.html">Demo (no graphics)</a>
+<a href="demo/index.html">Demo (with graphics)</a>
 </body>
 </html>
