Adding info button with link to Wiki article

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,12 +15,13 @@
 <div id="board"></div>
 
 <div class="controls">
-<div class="lft">&nbsp;</div>
-<div class="bg">
-<div class="info" id="info">Moves: <div id="moves">0</div><div class="moves_bg">&nbsp;</div></div>
-<a href="javascript:void(0)" id="new-game">&nbsp;</a>
-</div>
-<div class="rgt">&nbsp;</div>
+    <div class="lft">&nbsp;</div>
+    <div class="bg">
+        <a href="http://en.wikipedia.org/wiki/15_puzzle" class="help" target="_blank">&nbsp;</a>
+        <div class="info" id="info">Moves: <div id="moves">0</div><div class="moves_bg">&nbsp;</div></div>
+        <a href="javascript:void(0)" id="new-game" class="new-game">&nbsp;</a>
+    </div>
+    <div class="rgt">&nbsp;</div>
 </div>
 
 <div class="credits">
