--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<a href="fifteenpuzzle.html">Demo (no graphics)</a>
+<a href="fifteenpuzzle.html">Demo (no graphics)</a><br>
 <a href="demo/index.html">Demo (with graphics)</a>
 </body>
 </html>
